hphp/hack/test/typecheck/capture_this2.php.exp
File "capture_this2.php", line 5, characters 26-30:
Cannot use $this as lexical variable (Naming[2077])
