hphp/hack/test/typecheck/capture_this2.php
<?hh

class A {
  public function g(): void {
    $a = function() use ($this) {};
  }
}
